Tue Feb  1 21:49:24 2005  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/drb/drb.rb (DRb::DRbObject#respond_to?): check marshal_dump and
	_dump.

Tue Feb  1 00:20:23 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in, configure.in: made EXTOUT configurable.

	* ext/extmk.rb (extmake), lib/mkmf.rb: keep topdir as relative style.

	* lib/mkmf.rb: make extensions in depth order.  [ruby-dev:25522]

	* configure.in (aix): fix linker flags on AIX.  [ruby-talk:125460]

Mon Jan 31 13:16:39 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/extconf.rb: add tkutil configuration step (remove old schema)

	* ext/tk/depend: remove the information of tkutil

	* ext/tk/make-tkutil: sub-part of Makefile to compile tkutil

	* ext/tk/tkutil/tkutil.c: move tkutil.c to subdirectory

	* ext/tk/tkutil/subconf.rb: configuration file for tkutil.c

	* ext/tk/tkutil/depend: ditto

Mon Jan 31 13:13:35 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/tcltklib.c: add invalid namespace check

	* ext/tk/lib/multi-tk.rb: add invalid_namespace? method

	* ext/tk/lib/remote-tk.rb: ditto

Sat Jan 29 09:42:12 2005  Sam Roberts  <sroberts@uniserve.com>

	* lib/resolv.rb (Resolv::DNS::Resource::IN::SRV): Added RFC2782 SRV
	  resource record for specifying location of services.

Sat Jan 29 00:10:33 2005  Kazuo Saito  <ksaito@uranus.dti.ne.jp>

	* ascii.c, euc_jp.c, hash.c, oniggnu.h, oniguruma.h, regcomp.c,
	regenc.c, regenc.h, regerror.c, regexec.c, reggnu.c, regint.h,
	regparse.c, regparse.h, sjis.c, st.c, st.h, utf8.c: imported
	Oni Guruma 3.5.4.

Fri Jan 28 17:16:55 2005  Tanaka Akira  <akr@m17n.org>

	* lib/resolv.rb (Resolv::DNS::Config.parse_resolv_conf):
	  parse options line for ndots option.
	  (Resolv::Hosts#lazy_initialize): return self.
	  (Resolv::DNS#lazy_initialize): ditto.
	  (Resolv::DNS::Config#lazy_initialize): ditto.
	  Suggested by Sam Roberts.

Thu Jan 27 17:15:03 2005  NAKAMURA Usaku  <usa@ruby-lang.org>
